Add mock Translate service and POST functionality

--- a/angularasp.netcore.client/src/app/app.component.html
+++ b/angularasp.netcore.client/src/app/app.component.html
@@ -1,8 +1,8 @@
-﻿<h1 id="tableLabel">Weather forecast</h1>
+<h1 id="tableLabel">Currency-to-Word</h1>
 
-<p>This component demonstrates fetching data from the server.</p>
+<p>This component demonstrates the conversion of currency (dollars) from numbers to words; the conversion takes place on the server.</p>
 
-<p *ngIf="!forecasts"><em>Loading... Please refresh once the ASP.NET backend has started. See <a href="https://aka.ms/jspsintegrationangular">https://aka.ms/jspsintegrationangular</a> for more details.</em></p>
+<p *ngIf="!forecasts"><em>Loading... Please refresh once the ASP.NET backend has started.</em></p>
 
 <table *ngIf="forecasts">
     <thead>
