--- a/angularasp.netcore.client/src/app/app.component.css
+++ b/angularasp.netcore.client/src/app/app.component.css
@@ -1,7 +1,7 @@
-﻿:host {
+:host {
     max-width: 1280px;
     padding: 2rem;
-    text-align: center;
+    text-align: left;
 }
 
 tr:nth-child(even) {
@@ -19,4 +19,12 @@ th, td {
 
 table {
     margin: 0 auto;
+}
+
+.example-spacer {
+  flex: 1 1 auto;
+}
+
+mat-form-field {
+  margin-right: 12px;
 }
